[tool.poetry]
name = "OffbrandSnapchat"
version = "1.0.1"
description = "Terminal version of snapchat"
authors = ["MocaCDeveloper <t.targetyt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"